# PureSearch

./: .gitignore  Cargo.toml  README.md
puresearch-api/: Cargo.toml
puresearch-api/src/: lib.rs  main.rs
puresearch-core/: Cargo.toml
puresearch-core/src/: lib.rs
puresearch-storage/: Cargo.toml
puresearch-storage/src/: lib.rs  segment.rs  wal.rs
puresearch-storage/tests/: integration_test.rs
