[package]
name = "puresearch-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puresearch-core = { path = "../puresearch-core" }
puresearch-storage = { path = "../puresearch-storage" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
